This commit was manufactured by cvs2svn to create tag 'struct-reorg-merge-20050117'.
From-SVN: r93112